# dml

./: .gitignore  CMakeLists.txt  README.md
cmake/patches/grpc/: CMakeLists.txt
examples/test/: testdevicelist  testgraphspec  testgraphspec.json  testgraphspec2.json
include/agent/: master_client.h  worker_service.h
include/graph/: node.h
include/ops/: apply_weight.h  err.h  operation.h  read_input.h  sigmoid.h  transpose.h
include/runtime/: device.h  device_mgr.h  graph_mgr.h
src/agent/: master.cpp  worker.cpp
src/agent/proto/: ps_grpc.proto
src/graph/: graph.cpp  graph.h  node.cpp  node.h
src/ops/: add_bias.h  apply_weight.h  err.h  operation.h  ops_store.h  read_input.h  sigmoid.h  softmax.h  transpose.h
src/runtime/: CMakeLists.txt  Makefile  device.h  device_mgr.cpp  device_mgr.h  graph_mgr.cpp  graph_mgr.h  master.cpp  partitioner.cpp  partitioner.h  scheduler.cpp  scheduler.h  worker.cpp
src/runtime/rpc/: CMakeLists.txt  master_client.cpp  master_client.h  worker_service.cpp  worker_service.h
src/runtime/rpc/protos/: CMakeLists.txt  node_def.proto  weight.proto  worker.proto  worker_service.proto
src/util/: util.h
